released v0.18.1 - fixes spacing issue on waitlist form

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,7 +7,7 @@
 :root {
   --max-page-width: 900px;
   --transition-duration: 0.1s;
-  --border-radius: 1.2rem;
+  --border-radius: 1rem;
   --border-thickness: 2px;
   --accent-color: rgb(255, 0, 200);
   --page-inset: 2rem;
